# aws-parallelcluster-rsw-ha

./: .gitignore  .nojekyll  AMI.html  AWSParallelcluster.html  Architecture.html  Introduction.html  PWB.html  Pulumi.html  README.md  index.html  pyproject.toml  requirements.txt  robots.txt  search.json  sitemap.xml
.github/workflows/: publish.yml
docs/: AMI.qmd  AWSParallelcluster.qmd  Architecture.qmd  Introduction.qmd  PWB.qmd  Pulumi.qmd  _quarto.yml
image/: README.md  build-image.sh  configure.R  globals.sh  image-config.yaml  install-apptainer.sh  install-dummy.sh  install-image.sh  install-nvidia.sh  install-os-deps.sh  install-pwb-session.sh  install-pwb.sh  install-python.sh  install-quarto.sh  install-r.sh  package.R  pre.sh  run.R  setup-sssd.sh  tools.sh
parallelcluster/: README.md  add-external-lb.sh  cluster-stat.sh  deploy.sh  elb.sh  fix-sg.sh  port443.diff  port8787.diff  tools.sh
parallelcluster/config/: cluster-config-wb.bench.tmpl  cluster-config-wb.benchmark.tmpl  cluster-config-wb.default.tmpl  cluster-config-wb.easybuild.tmpl  cluster-config-wb.ide-team.tmpl  cluster-config-wb.rpharma.tmpl  cluster-config-wb.tmpl  cluster-config-wb.yaml
parallelcluster/scripts/: config-compute.sh  config-login.sh  install-compute.sh  install-pwb-config.sh
pulumi/: Pulumi.ide-team.yaml  Pulumi.sjc-security.yaml  Pulumi.yaml  README.md  __main__.py  config  justfile  pyproject.toml  requirements.txt
pulumi-db/: Pulumi.yaml  __main__.py  requirements.txt
pulumi/server-side-files/: justfile
pulumi/server-side-files/config/: add-group-member.exp  create-group.exp  create-users.exp  krb5.conf  resolv.conf  useradd.sh
site_libs/bootstrap/: bootstrap.min.css
