[project]
name = "aws-parallelcluster-rsw-ha"
version = "0.1.0"
requires-python = ">=3.12.11"
dependencies = [
    "attrs==23.2.0",
    "aws-cdk-assets==1.204.0",
    "aws-cdk-aws-acmpca==1.204.0",
    "aws-cdk-aws-apigateway==1.204.0",
    "aws-cdk-aws-applicationautoscaling==1.204.0",
    "aws-cdk-aws-autoscaling==1.204.0",
    "aws-cdk-aws-autoscaling-common==1.204.0",
    "aws-cdk-aws-autoscaling-hooktargets==1.204.0",
    "aws-cdk-aws-batch==1.204.0",
    "aws-cdk-aws-certificatemanager==1.204.0",
    "aws-cdk-aws-cloudformation==1.204.0",
    "aws-cdk-aws-cloudfront==1.204.0",
    "aws-cdk-aws-cloudwatch==1.204.0",
    "aws-cdk-aws-codebuild==1.204.0",
    "aws-cdk-aws-codecommit==1.204.0",
    "aws-cdk-aws-codeguruprofiler==1.204.0",
    "aws-cdk-aws-codestarnotifications==1.204.0",
    "aws-cdk-aws-cognito==1.204.0",
    "aws-cdk-aws-dynamodb==1.204.0",
    "aws-cdk-aws-ec2==1.204.0",
    "aws-cdk-aws-ecr==1.204.0",
    "aws-cdk-aws-ecr-assets==1.204.0",
    "aws-cdk-aws-ecs==1.204.0",
    "aws-cdk-aws-efs==1.204.0",
    "aws-cdk-aws-elasticloadbalancing==1.204.0",
    "aws-cdk-aws-elasticloadbalancingv2==1.204.0",
    "aws-cdk-aws-events==1.204.0",
    "aws-cdk-aws-fsx==1.204.0",
    "aws-cdk-aws-globalaccelerator==1.204.0",
    "aws-cdk-aws-iam==1.204.0",
    "aws-cdk-aws-imagebuilder==1.204.0",
    "aws-cdk-aws-kinesis==1.204.0",
    "aws-cdk-aws-kms==1.204.0",
    "aws-cdk-aws-lambda==1.204.0",
    "aws-cdk-aws-logs==1.204.0",
    "aws-cdk-aws-route53==1.204.0",
    "aws-cdk-aws-route53-targets==1.204.0",
    "aws-cdk-aws-s3==1.204.0",
    "aws-cdk-aws-s3-assets==1.204.0",
    "aws-cdk-aws-sam==1.204.0",
    "aws-cdk-aws-secretsmanager==1.204.0",
    "aws-cdk-aws-servicediscovery==1.204.0",
    "aws-cdk-aws-signer==1.204.0",
    "aws-cdk-aws-sns==1.204.0",
    "aws-cdk-aws-sns-subscriptions==1.204.0",
    "aws-cdk-aws-sqs==1.204.0",
    "aws-cdk-aws-ssm==1.204.0",
    "aws-cdk-aws-stepfunctions==1.204.0",
    "aws-cdk-cloud-assembly-schema==1.204.0",
    "aws-cdk-core==1.204.0",
    "aws-cdk-custom-resources==1.204.0",
    "aws-cdk-cx-api==1.204.0",
    "aws-cdk-region-info==1.204.0",
    "aws-parallelcluster==3.11.1",
    "boto3==1.35.65",
    "botocore==1.35.65",
    "cattrs==23.1.2",
    "certifi==2024.8.30",
    "charset-normalizer==3.4.0",
    "click==8.1.7",
    "clickclick==20.10.2",
    "colorama==0.4.6 ; sys_platform == 'win32'",
    "connexion==2.13.1",
    "constructs==3.4.344",
    "flask==2.2.5",
    "idna==3.10",
    "importlib-resources==6.4.5",
    "inflection==0.5.1",
    "itsdangerous==2.2.0",
    "jinja2==3.1.4",
    "jmespath==0.10.0",
    "jsii==1.85.0",
    "jsonschema==4.23.0",
    "jsonschema-specifications==2024.10.1",
    "markupsafe==3.0.2",
    "marshmallow==3.23.1",
    "packaging==24.2",
    "publication==0.0.3",
    "python-dateutil==2.9.0.post0",
    "pyyaml==6.0.2",
    "referencing==0.35.1",
    "requests==2.32.3",
    "rpds-py==0.21.0",
    "s3transfer==0.10.3",
    "setuptools==75.5.0",
    "six==1.16.0",
    "tabulate==0.8.10",
    "typeguard==2.13.3",
    "typing-extensions==4.12.2",
    "urllib3==2.2.3",
    "werkzeug==2.3.8",
]

