[project]
name = "parallelcluster-pulumi"
version = "0.1.0"
requires-python = ">=3.12.11"
dependencies = [
    "arpeggio==2.0.2",
    "attrs==24.2.0",
    "certifi==2024.8.30",
    "charset-normalizer==3.4.0",
    "debugpy==1.8.8",
    "dill==0.3.9",
    "grpcio==1.66.2",
    "idna==3.10",
    "jinja2==3.1.6",
    "markupsafe==3.0.2",
    "parver==0.5",
    "protobuf==4.25.5",
    "pulumi==3.137.0",
    "pulumi-aws==6.56.1",
    "pulumi-aws-native==0.126.0",
    "pulumi-awsx==2.16.1",
    "pulumi-command==1.0.1",
    "pulumi-docker==4.5.6",
    "pulumi-kubernetes==4.9.0",
    "pulumi-random==4.16.7",
    "pulumi-tls==5.0.9",
    "pyyaml==6.0.2",
    "requests==2.32.3",
    "semver==2.13.0",
    "setuptools==78.1.1",
    "six==1.16.0",
    "urllib3==2.2.3",
    "wheel==0.45.0",
]
